<resources>
    <string name="app_name">NewsFeed</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="image">image</string>
    <string name="ok">OK</string>
    <string name="start">start</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="screen_one_title">News Letter</string>
    <string name="screen_one_desc">Get News Letter based on settings you opt in</string>

    <string name="screen_two_title">Notification</string>
    <string name="screen_two_desc">Receive instant notification for every news</string>

    <string name="screen_three_title">Mail</string>
    <string name="screen_three_desc">Receive mail for important and trending news around the world</string>
    <string name="newspaper">NewsPaper</string>
    <string name="logout">logout</string>
</resources>
